fix(cards): adjust card alignment
Cards now align with title/search bar at all resolutions.

close #105

--- a/css/main.css
+++ b/css/main.css
@@ -838,17 +838,28 @@ ul.triggers li:hover {
 
 
 @media (min-width: 600px) {
-
   .project-item {
-    width: 48%;
+    width: 49%;
     margin-right: 2%;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 970px) {
+  .project-item:nth-child(2n+2) {
+    margin-right: 0;
   }
 }
 
 @media (min-width: 970px) {
   .project-item {
     width: 31.33%;
-    margin-right: 2%;
+    margin-right: 3%;
+  }
+}
+
+@media (min-width: 970px) and (max-width: 1250px) {
+  .project-item:nth-child(3n+3) {
+    margin-right: 0;
   }
 }
 
@@ -867,10 +878,19 @@ ul.triggers li:hover {
   .header-image {
     width: 50%;
   }
+
   .project-item {
-    width: 22%;
+    width: 22.75%;
     margin-left: 1.5%;
     margin-right: 1.5%;
+  }
+
+  .project-item:nth-child(4n+1) {
+    margin-left: 0;
+  }
+
+  .project-item:nth-child(4n+4) {
+    margin-right: 0;
   }
 }
 
